--- a/Aldebaran.CSharp.csproj
+++ b/Aldebaran.CSharp.csproj
@@ -71,10 +71,14 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Camera\CameraFade.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraScript.cs" />
+    <Compile Include="Assets\Scripts\Game\Coin.cs" />
     <Compile Include="Assets\Scripts\Game\PlayerScript.cs" />
     <Compile Include="Assets\Scripts\Game\PlayerScrollObject.cs" />
+    <Compile Include="Assets\Scripts\Game\Score.cs" />
+    <Compile Include="Assets\Scripts\Game\ScoreGUI.cs" />
     <Compile Include="Assets\Scripts\Game\ScrollObjectScript.cs" />
     <Compile Include="Assets\Scripts\Game\SpikeScript.cs" />
+    <Compile Include="Assets\Scripts\Game\StepCreate.cs" />
     <Compile Include="Assets\Scripts\GlobalVariableScript.cs" />
     <Compile Include="Assets\Scripts\Menu\GameStartScript.cs" />
     <Compile Include="Assets\Scripts\Menu\OptionScript.cs" />
