--- a/Aldebaran.CSharp.csproj
+++ b/Aldebaran.CSharp.csproj
@@ -61,10 +61,17 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Common">
+      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Camera\CameraFade.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraScript.cs" />
+    <Compile Include="Assets\Scripts\Game\AutoDeleteScript.cs" />
     <Compile Include="Assets\Scripts\Game\Coin.cs" />
     <Compile Include="Assets\Scripts\Game\Coin_Blue.cs" />
     <Compile Include="Assets\Scripts\Game\Coin_Red.cs" />
@@ -72,6 +79,7 @@
     <Compile Include="Assets\Scripts\Game\PlayerScrollObject.cs" />
     <Compile Include="Assets\Scripts\Game\Score.cs" />
     <Compile Include="Assets\Scripts\Game\ScoreGUI.cs" />
+    <Compile Include="Assets\Scripts\Game\ScrollObject.cs" />
     <Compile Include="Assets\Scripts\Game\ScrollObjectScript.cs" />
     <Compile Include="Assets\Scripts\Game\SpikeScript.cs" />
     <Compile Include="Assets\Scripts\Game\StepCreate.cs" />
