--- a/Aldebaran.CSharp.csproj
+++ b/Aldebaran.CSharp.csproj
@@ -61,6 +61,12 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Common">
+      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Camera\CameraFade.cs" />
@@ -72,6 +78,10 @@
     <Compile Include="Assets\Scripts\Game\ContinueNo.cs" />
     <Compile Include="Assets\Scripts\Game\ContinueYes.cs" />
     <Compile Include="Assets\Scripts\Game\GameSceneInitialize.cs" />
+    <Compile Include="Assets\Scripts\Game\PauseButton.cs" />
+    <Compile Include="Assets\Scripts\Game\Pause_Continue.cs" />
+    <Compile Include="Assets\Scripts\Game\Pause_Retry.cs" />
+    <Compile Include="Assets\Scripts\Game\Pause_TopMenu.cs" />
     <Compile Include="Assets\Scripts\Game\PlayerScript.cs" />
     <Compile Include="Assets\Scripts\Game\PlayerScrollObject.cs" />
     <Compile Include="Assets\Scripts\Game\Score.cs" />
