--- a/Aldebaran.CSharp.csproj
+++ b/Aldebaran.CSharp.csproj
@@ -80,16 +80,17 @@
     <Compile Include="Assets\Scripts\Game\GameSceneInitialize.cs" />
     <Compile Include="Assets\Scripts\Game\PauseButton.cs" />
     <Compile Include="Assets\Scripts\Game\Pause_Continue.cs" />
-    <Compile Include="Assets\Scripts\Game\Pause_Retry.cs" />
-    <Compile Include="Assets\Scripts\Game\Pause_TopMenu.cs" />
     <Compile Include="Assets\Scripts\Game\PlayerScript.cs" />
     <Compile Include="Assets\Scripts\Game\PlayerScrollObject.cs" />
+    <Compile Include="Assets\Scripts\Game\Result.cs" />
+    <Compile Include="Assets\Scripts\Game\Retry.cs" />
     <Compile Include="Assets\Scripts\Game\Score.cs" />
     <Compile Include="Assets\Scripts\Game\ScoreGUI.cs" />
     <Compile Include="Assets\Scripts\Game\ScrollObject.cs" />
     <Compile Include="Assets\Scripts\Game\ScrollObjectScript.cs" />
     <Compile Include="Assets\Scripts\Game\SpikeScript.cs" />
     <Compile Include="Assets\Scripts\Game\StepCreate.cs" />
+    <Compile Include="Assets\Scripts\Game\TopMenu.cs" />
     <Compile Include="Assets\Scripts\GlobalVariableScript.cs" />
     <Compile Include="Assets\Scripts\Menu\GameStartScript.cs" />
     <Compile Include="Assets\Scripts\Menu\OptionScript.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="Assets\Scripts\Option\SetBGMVolume.cs" />
     <Compile Include="Assets\Scripts\Option\SetSEVolume.cs" />
     <Compile Include="Assets\Scripts\Score\ScoreBackScript.cs" />
+    <Compile Include="Assets\Scripts\Score\ShowScore.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
